--- a/package.json
+++ b/package.json
@@ -1,15 +1,32 @@
 {
-  "name": "training-schedule",
+  "name": "course-info-app",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "electron .",
+    "build": "electron-builder"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
-    "electron-builder": "^24.13.3"
+    "electron": "^26.1.0",
+    "electron-builder": "^24.5.0"
+  },
+  "build": {
+    "appId": "com.example.courseinfo",
+    "productName": "CourseInfoApp",
+    "directories": {
+      "output": "dist"
+    },
+    "files": [
+      "**/*"
+    ],
+    "win": {
+      "target": "nsis"
+    },
+    "mac": {
+      "target": "dmg"
+    },
+    "linux": {
+      "target": "AppImage"
+    }
   }
 }
