--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
+    "jspdf": "^2.5.1",
     "multer": "^1.4.5-lts.1",
+    "vxe-table": "^4.7.11",
+    "vxe-table-plugin-export-pdf": "^4.0.2",
     "xlsx": "^0.18.5"
   }
 }
