--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "jspdf": "^2.5.1",
     "multer": "^1.4.5-lts.1",
     "vxe-table": "^4.7.11",
-    "vxe-table-plugin-export-pdf": "^4.0.2",
-    "xlsx": "^0.18.5"
+    "vxe-table-plugin-export-pdf": "^4.0.2"
   }
 }
