--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "training-schedule",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "keywords": [],
   "author": "",
@@ -16,5 +17,8 @@
     "multer": "^1.4.5-lts.1",
     "vxe-table": "^4.7.11",
     "vxe-table-plugin-export-pdf": "^4.0.2"
+  },
+  "devDependencies": {
+    "cypress": "^13.12.0"
   }
 }
