--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "devDependencies": {
     "cypress": "^13.12.0"
   },
-  "description": ""
+  "description": "",
+  "engines": {
+  "node": "18.16"
+  }
 }
