--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,16 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "pages/**/*.html",
-        "use": "@vercel/static"
-      }
-    ],
-    "routes": [
-      { "src": "/", "dest": "/pages/main.html" }
-    ]
-  }
-  
+  "version": 2,
+  "builds": [
+    {
+      "src": "pages/**/*.html",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "GIF/**/*",
+      "use": "@vercel/static"
+    }
+  ],
+  "routes": [
+    { "src": "/", "dest": "/pages/main.html" }
+  ]
+}
