--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "debug": "^4.3.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jspdf": "^2.5.1",
     "mongodb": "^6.8.0",
     "multer": "^1.4.5-lts.1",
+    "uuid": "^10.0.0",
+    "vercel": "^32.7.2",
     "vxe-table": "^4.7.11",
     "vxe-table-plugin-export-pdf": "^4.0.2"
   },
