--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jspdf": "^2.5.1",
     "mongodb": "^6.8.0",
     "multer": "^1.4.5-lts.1",
+    "redis": "^4.6.15",
     "uuid": "^10.0.0",
     "vercel": "^32.7.2",
     "vxe-table": "^4.7.11",
